Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@ Contact Number</p>
 
 <p>+63325146837</p>
 
+<p><a href="http://www.property24.com.ph/2-bedroom-apartment-and-condominium-for-rent-in-guadalupe-110506959">http://www.property24.com.ph/2-bedroom-apartment-and-condominium-for-rent-in-guadalupe-110506959</a></p>
+
+<p>₱ 18,000</p>
+
+<p>2 Bedroom Apt in Guadalupe
+Located at Guadalajara Guadalupe Cebu
+Accessible Location
+Near churches, schools etc.
+2 storey
+2 bedrooms
+2 mos. advance
+1 month deposit
+18k/month</p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/jlmwebhosting/cebuapartmentorroomforrent">Cebuapartmentorroomforrent</a> is maintained by <a href="https://github.com/jlmwebhosting">jlmwebhosting</a>.</span>
 
