Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,6 +45,46 @@ Near churches, schools etc.
 1 month deposit
 18k/month</p>
 
+<p><a href="http://www.property24.com.ph/1-bedroom-apartment-and-condominium-for-rent-in-capitol-site-110506955">http://www.property24.com.ph/1-bedroom-apartment-and-condominium-for-rent-in-capitol-site-110506955</a>
+₱ 20,000</p>
+
+<p>1 bedroom Apartment and Condominium for rent</p>
+
+<p>Winland Tower 2bedroom Capitol Condo
+Accessible Location
+Near to Hospitals (Cebu Doctors, ChongHua etc.)
+Near to Malls (Robinson, One Pavilion, etc.)
+Unfurnished
+Very spacious unit
+76 sq.m
+Condo dues around 33/sq.m
+2 mos. advance
+2 mos. deposit
+Parking = P1,500/month</p>
+
+<p>Amenities:
+Swimming Pool
+Gym</p>
+
+<p>eremiah Alcorcon
+Licensed Broker: #0015669
+View Broker/Agents Properties
+Contact Number</p>
+
+<p>09325825210</p>
+
+<p>09325825210</p>
+
+<p>Rooms
+Bedroom
+1
+Bathroom
+1</p>
+
+<p>2 mos. advance
+2 mos. deposit
+Parking = P1,500/month</p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/jlmwebhosting/cebuapartmentorroomforrent">Cebuapartmentorroomforrent</a> is maintained by <a href="https://github.com/jlmwebhosting">jlmwebhosting</a>.</span>
 
