Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -85,6 +85,52 @@ Bathroom
 2 mos. deposit
 Parking = P1,500/month</p>
 
+<p><a href="http://www.property24.com.ph/1-bedroom-apartment-and-condominium-for-rent-in-cebu-city-110509544">http://www.property24.com.ph/1-bedroom-apartment-and-condominium-for-rent-in-cebu-city-110509544</a></p>
+
+<p>₱ 15,000</p>
+
+<p>1 bedroom Apartment and Condominium for rent in Cebu City</p>
+
+<p>Salinas Lahug, Cebu City, Cebu City, Cebu City</p>
+
+<p>La Guardia Flats II for Rent or Sale Near IT Park
+La Guardia Flats II is a testament to the success of the first tower. Because of the unprecedented response, management decided to come up with a sequel equipped with better features.
+Amenities:
+Lobby and Reception area
+Two elevator units
+Indoor parking area
+Swimming Pool
+Viewing roofdeck
+Fire alarm and sprinkler system
+CCTV system
+Commercial area for convenience shop, laundry service and internet cafe
+Specifications
+Finished walls and floors
+Floor Area: 22 sq. m. – 27 sq. m.
+Tiled toilet and bath with bathroom fixtures
+Separate toilet and bath
+Private balcony
+SELLING PRICE: 2.3M fully furnished, net of all the government taxes related to transfer of title. Also available for rent @ 15k per month minimum of 1 year contract, 1 month advance 2 months security deposit.
+See to appreciate! contact us now
+Property Details
+Type of Property
+Apartment and Condominium
+Floor Area
+23 SQM
+List Date
+29 June 2015
+Rooms
+Bedroom
+1
+Bathroom
+1
+External Features
+Garden
+Yes
+General Features
+Special Feature
+Pets Allowed</p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/jlmwebhosting/cebuapartmentorroomforrent">Cebuapartmentorroomforrent</a> is maintained by <a href="https://github.com/jlmwebhosting">jlmwebhosting</a>.</span>
 
