Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -131,6 +131,29 @@ General Features
 Special Feature
 Pets Allowed</p>
 
+<p><a href="http://www.property24.com.ph/apartment-and-condominium-for-rent-in-banawa-110506965">http://www.property24.com.ph/apartment-and-condominium-for-rent-in-banawa-110506965</a>
+₱ 12,000</p>
+
+<p>Apartment and Condominium for rent in Banawa</p>
+
+<p>Cebu City, Banawa</p>
+
+<p>studio apartment in banawa
+Located Near One Pavilion Mall
+Very Accessible Location
+Near to malls, churches, schools. etc.</p>
+
+<ul>
+<li>laundry shop</li>
+<li>roof drying area</li>
+</ul>
+
+<p>12k/month</p>
+
+<p>Rooms
+Bathroom
+1</p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/jlmwebhosting/cebuapartmentorroomforrent">Cebuapartmentorroomforrent</a> is maintained by <a href="https://github.com/jlmwebhosting">jlmwebhosting</a>.</span>
 
