Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -154,6 +154,39 @@ Near to malls, churches, schools. etc.</p>
 Bathroom
 1</p>
 
+<p><a href="http://www.property24.com.ph/1-bedroom-apartment-and-condominium-for-rent-in-mabolo-110505333">http://www.property24.com.ph/1-bedroom-apartment-and-condominium-for-rent-in-mabolo-110505333</a>
+₱ 25,000</p>
+
+<p>1 bedroom Apartment and Condominium for rent in Mabolo</p>
+
+<p>Cebu City, Mabolo</p>
+
+<p>Lot 8, mabolo, 1br condo, fully furnished
+Located at Mabolo, Cebu City
+Near SM, Ayala, Cebu Business Park, I.T Park
+Fully Furnished
+1 bedroom
+25 sq.m
+25k/month inclusive of condo dues</p>
+
+<p>Amenities:
+infinity pool
+100% back up generator
+CCTV
+Gym
+Property Details
+Type of Property
+Apartment and Condominium
+Floor Area
+25 SQM
+List Date
+20 June 2015
+Rooms
+Bedroom
+1
+Bathroom
+1</p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/jlmwebhosting/cebuapartmentorroomforrent">Cebuapartmentorroomforrent</a> is maintained by <a href="https://github.com/jlmwebhosting">jlmwebhosting</a>.</span>
 
