Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -187,6 +187,36 @@ Bedroom
 Bathroom
 1</p>
 
+<p><a href="http://www.property24.com.ph/3-bedroom-apartment-and-condominium-for-rent-in-mabolo-110506963">http://www.property24.com.ph/3-bedroom-apartment-and-condominium-for-rent-in-mabolo-110506963</a>
+₱ 25,000</p>
+
+<p>3 bedroom Apartment and Condominium for rent in Mabolo</p>
+
+<p>Cebu City, Mabolo</p>
+
+<p>East Aurora Tower, Mabolo, 3br condo
+Accessible location</p>
+
+<ul>
+<li>SM</li>
+<li>Ayala</li>
+<li>I.T park</li>
+<li>Cebu Business Park
+Very spacious unit
+Near Castle Peak Hotel
+3 bedroom
+2 CR,
+Master's Bedroom w/ own CR
+Fully Furnished 98.68 sq.m
+P25k/month inclusive of condo dues</li>
+</ul>
+
+<p>Rooms
+Bedroom
+3
+Bathroom
+2</p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/jlmwebhosting/cebuapartmentorroomforrent">Cebuapartmentorroomforrent</a> is maintained by <a href="https://github.com/jlmwebhosting">jlmwebhosting</a>.</span>
 
