Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,44 @@
     </section>
 
     <section class="main-content">
-      <p><a href="http://www.property24.com.ph/apartment-and-condominium-for-rent-in-cebu-city-110508522">http://www.property24.com.ph/apartment-and-condominium-for-rent-in-cebu-city-110508522</a></p>
+      <p><a href="http://www.property24.com.ph/1-bedroom-apartment-and-condominium-for-rent-in-cebu-city-110507482">http://www.property24.com.ph/1-bedroom-apartment-and-condominium-for-rent-in-cebu-city-110507482</a>
+₱ 13,500</p>
+
+<p>1 bedroom Apartment and Condominium for rent in Cebu City</p>
+
+<p>First St. , Lahug, Cebu City, Cebu City</p>
+
+<p>1-BEDROOM Unit For Rent Near IT Park @ A Good Price of 13500
+Property: Edades Residencia
+Location: First St., Lahug, Cebu City</p>
+
+<p>Fully-furnished 1-BEDROOM Unit
+1 Toilet &amp; Bath
+On a high floor, enjoys Waterfront Hotel area and mountain views.
+READY FOR OCCUPANCY</p>
+
+<p>Lease Requirements:
+2 months Security Deposit
+1 month Advance</p>
+
+<p>Rate - Php13,500 per month
+Negotiable for long-term leases.</p>
+
+<p>CALL US NOW to set a viewing appointment!
+Property Details
+Type of Property
+Apartment and Condominium
+Floor Area
+19 SQM
+List Date
+24 June 2015
+Rooms
+Bedroom
+1
+Bathroom
+1</p>
+
+<p><a href="http://www.property24.com.ph/apartment-and-condominium-for-rent-in-cebu-city-110508522">http://www.property24.com.ph/apartment-and-condominium-for-rent-in-cebu-city-110508522</a></p>
 
 <p>Studio Condominium Unit near St. Theresa's College and Major Hospitals
 Fully furnished studio unit at Cityscape 2 along Juana Osmeña St. This is across the former Baseline Restaurant. Walking distance to St. Theresa's College, Redemptorist Church, major banks, Robinson's Fuente, Robinsons Cybergate, Perpetual Succour Hospital, Chong Hua Hospital, Cebu Doctors' University Hospital and Cebu Provincial Capitol Building. 2 minutes ride to Ayala Mall and 5 minutes ride to SM City Cebu. This practically close to everything.</p>
