Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -254,6 +254,29 @@ Bedroom
 Bathroom
 2</p>
 
+<p><a href="http://www.property24.com.ph/apartment-and-condominium-for-rent-in-lahug-110482548">http://www.property24.com.ph/apartment-and-condominium-for-rent-in-lahug-110482548</a></p>
+
+<p>La Guardia, Lahug Cebu City
+Near I.T Park
+lahug cebu city
+studio
+15k/month
+fully furnished
+Condo dues = P1,650</p>
+
+<p>1 mos. advance
+2 mos. security deposit
+Property Details
+Type of Property
+Apartment and Condominium
+Floor Area
+22 SQM
+List Date
+13 May 2015
+Rooms
+Bathroom
+1</p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/jlmwebhosting/cebuapartmentorroomforrent">Cebuapartmentorroomforrent</a> is maintained by <a href="https://github.com/jlmwebhosting">jlmwebhosting</a>.</span>
 
