Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
     </section>
 
     <section class="main-content">
-      <p><a href="http://www.property24.com.ph/1-bedroom-apartment-and-condominium-for-rent-in-cebu-city-110507482">http://www.property24.com.ph/1-bedroom-apartment-and-condominium-for-rent-in-cebu-city-110507482</a>
+      <p><a href="http://ph.iwanti.com/rent-sharing_bachelor-amp-039-s-pad-in-cebu-city-very-near-mango-avenue_idd_9916669">http://ph.iwanti.com/rent-sharing_bachelor-amp-039-s-pad-in-cebu-city-very-near-mango-avenue_idd_9916669</a></p>
+
+<p>Bachelor's Pad In Cebu City (very Near Mango Avenue) </p>
+
+<p>₱ 10,000.00
+Furnished Studio Type Room For Rent with bed, Private CR, mini-Kitchen, own entrance and aircon. This room is ideal for medical students, bachelors, managers and executives. 2 min. walk to Mango Avenue 10 minutes away from Ayala Center Cebu 15 minutes away from SM Cebu Terms: 2 mos security deposit 1 mo advance Water fee: P150 per head Electricity: Per submeter</p>
+
+<p><a href="http://www.property24.com.ph/1-bedroom-apartment-and-condominium-for-rent-in-cebu-city-110507482">http://www.property24.com.ph/1-bedroom-apartment-and-condominium-for-rent-in-cebu-city-110507482</a>
 ₱ 13,500</p>
 
 <p>1 bedroom Apartment and Condominium for rent in Cebu City</p>
