Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -26,6 +26,35 @@
 <p>₱ 10,000.00
 Furnished Studio Type Room For Rent with bed, Private CR, mini-Kitchen, own entrance and aircon. This room is ideal for medical students, bachelors, managers and executives. 2 min. walk to Mango Avenue 10 minutes away from Ayala Center Cebu 15 minutes away from SM Cebu Terms: 2 mos security deposit 1 mo advance Water fee: P150 per head Electricity: Per submeter</p>
 
+<p><a href="http://homes.mitula.ph/offer-detalle/55202/99527671572514133/3/1/for-rent-pad-cebu-city/CentralPhil?cc=1">http://homes.mitula.ph/offer-detalle/55202/99527671572514133/3/1/for-rent-pad-cebu-city/CentralPhil?cc=1</a></p>
+
+<p>Fully furnished apartments in Escario St., Cebu City accepting short term rentals. A selection of studio-types, bachelor's pad, and 2 bedroom apartment units. Close to Cebu city's uptown area and to shopping malls.</p>
+
+<p>Property Information
+Location    Escario St., Cebu City
+Type    2bedroom apartment, bachelor's pad, studio-type
+Floor Area  Bachelor's pad (1bedrm uni)t: 40sq.m.; 2-bedroom unit: 84 sq.m.
+Amenities/ Description  - Furnished with: Cable TV, refrigerator, stove, cooking and dining utensils, airconditioning for the bedrooms, electric fan for the ground floor, furniture for the living and dining areas and the bedroom.
+-regular telephone line available</p>
+
+<ul>
+<li>inside a private compound in a safe residential neighborhood
+Distances from Points of Interest   5 minutes to Ayala Center and Ayala business park
+5 minutes to Fuente Osmeña and other entertainment centers
+5 - 10 minutes to Cebu City's universities and hospitals
+30 - 45 minutes to beach resorts in Mactan Island
+around 30 - 45 minutes to the Cebu-Mactan International Airport
+Price   Studio-type (single room unit): PhP21,000/month
+Bachelor's pad (1 bedroom unit): PhP29,000/month
+2-bedroom unit:PhP36,000/month
+Rates already include payment for utilities.
+Contact Person  Achilles or Marjorie Santiago
+Phone No. (+63)(32) 417-9640,
+Mobile No. 0923-7344176 or 0936-5903000
+EMail Address: <a href="mailto:santachi8@yahoo.com">santachi8@yahoo.com</a> or <a href="mailto:achisant@gmail.com">achisant@gmail.com</a>
+</li>
+</ul>
+
 <p><a href="http://www.property24.com.ph/1-bedroom-apartment-and-condominium-for-rent-in-cebu-city-110507482">http://www.property24.com.ph/1-bedroom-apartment-and-condominium-for-rent-in-cebu-city-110507482</a>
 ₱ 13,500</p>
 
