Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,36 @@
     </section>
 
     <section class="main-content">
-      <p><a href="http://ph.iwanti.com/rent-sharing_bachelor-amp-039-s-pad-in-cebu-city-very-near-mango-avenue_idd_9916669">http://ph.iwanti.com/rent-sharing_bachelor-amp-039-s-pad-in-cebu-city-very-near-mango-avenue_idd_9916669</a></p>
+      <p><a href="https://www.facebook.com/RentCebu">https://www.facebook.com/RentCebu</a></p>
+
+<p>5k Studio for Rent in Canduman Mandaue</p>
+
+<p>Located in Canduman Mandaue city
+Unfurnished
+near Sacred heart school
+free Wifi
+Studio type with own toilet and bath
+Rent at 5000/month
+1 month advance
+1 month security deposit</p>
+
+<p>( if you have any properties, we can help you sale or rent it past.... )</p>
+
+<p>For assistance, more info. and site viewing contact : JONAS</p>
+
+<p>+63-93-230-40462 Sun - Viber
++63-92-674-51917 Globe
++63-32-239-8994 Landline
+skype : jonas.hoyohoy
+gmail : <a href="mailto:jonas.estate@gmail.com">jonas.estate@gmail.com</a></p>
+
+<p>JONAS C. HOYOHOY
+Project Specialist Online International
+PRC and HLURB Licensed Real Estate Practitioner
+PRC OR # : 4071325 -- HLURB OR #. 7539900
+Bachelor's Realty and Brokerage</p>
+
+<p><a href="http://ph.iwanti.com/rent-sharing_bachelor-amp-039-s-pad-in-cebu-city-very-near-mango-avenue_idd_9916669">http://ph.iwanti.com/rent-sharing_bachelor-amp-039-s-pad-in-cebu-city-very-near-mango-avenue_idd_9916669</a></p>
 
 <p>Bachelor's Pad In Cebu City (very Near Mango Avenue) </p>
 
