Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
     </section>
 
     <section class="main-content">
-      <p><a href="https://www.facebook.com/RentCebu">https://www.facebook.com/RentCebu</a></p>
+      <p><a href="http://homes.trovit.ph/listing/3-bedroom-unfurnished-house-for-rent-in-consolacion-cebu.ee1U1g1IwqA">http://homes.trovit.ph/listing/3-bedroom-unfurnished-house-for-rent-in-consolacion-cebu.ee1U1g1IwqA</a></p>
+
+<p><a href="http://homes.trovit.ph/listing/3-bedroom-unfurnished-house-for-rent-in-consolacion-cebu.ee1U1g1IwqA">http://homes.trovit.ph/listing/3-bedroom-unfurnished-house-for-rent-in-consolacion-cebu.ee1U1g1IwqA</a></p>
+
+<p>3BR Bungalow House For Rent in Consolacion, Cebu Location: Jugan Consolacion Cebu Details: 3 Bedrooms 2 Toilet and Bath 2 Car Garage Lot Area: 300 sqm Floor Area: 129 sqm along barangay road Fence and gated 1.7 km from main road and Mendero hospital 2.1 km from SM Consolacion 3.5 km from Fooda and Consolacion Parish Payment Terms: Rental Fee = 17,000.00 php/month 2 months security deposit 1 month advance Post Dated Checks Required 1 year contract </p>
+
+<p><a href="https://www.facebook.com/RentCebu">https://www.facebook.com/RentCebu</a></p>
 
 <p>5k Studio for Rent in Canduman Mandaue</p>
 
